Add test framework for spark project.