@@ -10,5 +10,12 @@ libraryDependencies ++= Seq(
   "org.apache.spark" %% "spark-sql" % "2.1.0",
   "org.apache.spark" %% "spark-mllib" % "2.1.0",
   "org.scalactic" %% "scalactic" % "3.0.1",
-  "org.scalatest" %% "scalatest" % "3.0.1" % "test"
+  "org.scalatest" %% "scalatest" % "3.0.1" % "test",
+  "com.holdenkarau" %% "spark-testing-base" % "2.1.0_0.6.0" % "test",
+  "org.scoverage" %% "scalac-scoverage-runtime" % "1.3.0" % "test"
 )
+
+parallelExecution in Test := false
+
+javaOptions ++= Seq("-Xms512M", "-Xmx2048M", "-XX:MaxPermSize=2048M", "-XX:+CMSClassUnloadingEnabled")
+
